<resources>
    <string name="app_name">PYP</string>

    <string name="buscar">Buscar</string>
    <string name="bitacora">Bitacora</string>
    <string name="placa">Placa</string>
    <string name="fecha">Fecha</string>
    <string name="campos_vacios">Los campos no pueden estar vacios o incorrectos</string>
    <string name="campos_incorrectos">Los valores ingresados deben ser numeros o letras</string>
    <string name="hint_placa">ABC123</string>
    <string name="contravencion">Contravencion</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="codigo">Codigo</string>
    <string name="descripcion">Descripción</string>
    <string name="agregar">Agregar</string>
    <string name="EditarBorrar">Editar/Borrar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="noExiste">El Campo ya no existe en la base de datos</string>
</resources>
